@@ -1,9 +1,9 @@
 Package: jagsUI
-Version: 1.4.3
-Date: 2016-9-15
+Version: 1.4.4
+Date: 2016-11-9
 Title: A Wrapper Around 'rjags' to Streamline 'JAGS' Analyses
-Author: Ken Kellner <ken@kenkellner.com>
-Maintainer: Ken Kellner <ken@kenkellner.com>
+Author: Ken Kellner <contact@kenkellner.com>
+Maintainer: Ken Kellner <contact@kenkellner.com>
 Depends:
     R (>= 2.14.0),
     lattice
