@@ -20,7 +20,7 @@
 }
 
 \author{ 
-  Ken Kellner \email{ken@kenkellner.com}.
+  Ken Kellner \email{contact@kenkellner.com}.
 }
 
 \examples{  
