@@ -1,3 +1,7 @@
+# Changes from Version 1.4.3 to 1.4.4 [9-Nov-2016] #
+
+Change default approach to generating random seeds.
+
 # Changes from Version 1.4.2 to 1.4.3 [15-Sept-2016] #
 
 Fix to allow running in parallel when dependencies are in non-standard libraries. Fix bug when updating jagsbasic class.
